# streamingserver

./: .pylintrc  COPYRIGHT  FFMPEG7_IMPROVEMENTS.md  ISO_Base_Media_File_Format.md  MANIFEST.in  Makefile.am  README.md  all_providers_recording_test.py  architecture.md  auth.md  one_provider_recording_test.py  providers.md  pyproject.toml  quality.md  recorders.md  requirements.txt  run_tests.py  session.md  setup.cfg  streamingserver.spec  unit_test.py
.github/: Makefile.am
.github/workflows/: Makefile.am  build.yml  publish_to_pypi.yml
CONTROL/: control  postinst  postrm  preinst  triggers
scripts/: Makefile.am  install-deps.sh
src/: Debug.py  Makefile.am  Version.py  __init__.py  plugin.py
src/streamingserver/: Makefile.am  PlutoTV.py  Version.py  __init__.py  auth_utils.py  base_provider.py  base_recorder.py  base_resolver.py  config.py  constants.py  create_pluto_playlist_and_epg.py  crypt_utils.py  debug.py  debug_config.txt  drm_utils.py  favorites.py  ffmpeg_utils.py  hls_playlist.py  hls_playlist_utils.py  hls_quality_analyzer.py  hls_recorder.py  hls_recorder_base.py  hls_recorder_basic.py  hls_recorder_live.py  hls_recorder_m4s.py  hls_recorder_template.py  hls_segment.py  hls_segment_processor.py  hls_segment_utils.py  hls_switch.py  log_utils.py  m3u8_playlist_utils.py  main.py  mp4_recorder.py  navigator.py  parse_hls.py  playlist.py  plutotv_utils.py  provider.py  provider_manager.py  (+25 more)
src/streamingserver/data/: Makefile.am  ad2_0.ts  dummy.txt  plutotv-playlist.m3u8  providers.json
src/streamingserver/playlists/: Makefile.am
(+11 files in other folders)
