[flake8]
ignore = W191, W503, E117, E203, E242, E501

[pycodestyle]
count = False
ignore = W191, W503, E117, E203, E242

max-line-length = 150
statistics = True

[metadata]
name = streamingserver
version = 0.0.1
author = digi
author_email = swmaniacster@gmail.com
description = streaming server for StreamingCockpit DreamOs plugin
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dream-apha/streamingserver
project_urls =
    Bug Tracker = https://github.com/dream-alpha/streamingserver/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    # Add other dependencies here

[options.package_data]
streamingserver =

[options.packages.find]
where = src

[options.extras_require]
dev =

[options.entry_points]
console_scripts =
    streamingserver=streamingserver.main:main
